# HabitTreker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habit/: models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_super_user.py
