[tool.poetry]
name = "habittreker"
version = "0.1.0"
description = ""
authors = ["dimapbb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
redis = "^5.2.0"
eventlet = "^0.37.0"
django-celery-beat = "^2.7.0"
coverage = "^7.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
